# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Changed
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.4 -> 3.8.5
  - async-timeout 4.0.2 -> 4.0.3
  - boto3 1.26.147 -> 1.28.52
  - botocore 1.29.147 -> 1.31.52
  - captcha 0.4 -> 0.5.0
  - certifi 2023.5.7 -> 2023.7.22
  - charset-normalizer 3.1.0 -> 3.2.0
  - configparser 5.3.0 -> 6.0.0
  - cryptography 41.0.2 -> 41.0.4
  - django 3.2.20 -> 3.2.21
  - decorator 5.1.1 -> removed
  - frozenlist 1.3.3 -> 1.4.0
  - google-api-core 2.11.0 -> 2.11.1
  - google-api-python-client 2.88.0 -> 2.100.0
  - google-auth 2.19.1 -> 2.23.0
  - google-auth-httplib2 0.1.0 -> 0.1.1
  - googleapis-common-protos 1.59.0 -> 1.60.0
  - gunicorn 20.1.0 -> 21.2.0
  - maxminddb 2.3.0 -> 2.4.0
  - meraki 1.33.0 -> 1.37.2
  - mock 5.0.2 -> 5.1.0
  - netaddr 0.8.0 -> 0.9.0
  - pillow 9.5.0 -> 10.0.1
  - protobuf 4.23.2 -> 4.24.3
  - pyjwt 2.7.0 -> 2.8.0
  - pyotp 2.8.0 -> 2.9.0
  - pyparsing 3.0.9 -> 3.1.1
  - pytz 2023.3 -> 2023.3.post1
  - redis 4.5.5 -> 4.6.0
  - s3transfer 0.6.1 -> 0.6.2
  - soupsieve 2.4.1 -> 2.5
  - typing-extensions 4.6.3 -> 4.8.0
  - urllib3 1.26.16 -> 1.26.17
  - validators 0.20.0 -> 0.22.0
  - werkzeug 2.3.4 -> 2.3.7
  - setuptools 67.8.0 -> removed
- [TLS] Update default parameters for accepted TLS versions
### Fixed
- [API_PARSER] [CSC_DOMAINMANAGER] Correctly handle log stagnation and query interval
- [API_PARSER] [VADESECURE] Ensure correct user ID is used depending on API
- [PKG_UPGRADE] Avoid trying to launch upgrade scripts when node is not bootstrapped
- [GUI] [ACLS] Improve 'Used by' presentation of Wokrflows using ACLs
- [GUI] [FRONTEND] Prevent mode modification if Frontend is linked to a Workflow/IDP