@@ -6,9 +6,15 @@
 ########################## WARNING ###############################
 
 {% if frontend.mode == "filebeat" %}
-{% if frontend.api_parser_use_proxy %}
+{% if frontend.api_parser_use_proxy -%}
+{% if frontend.api_parser_custom_proxy -%}
+# env.http_proxy: "{{ frontend.api_parser_custom_proxy }}"
+# env.https_proxy: "{{ frontend.api_parser_custom_proxy }}"
+# env.ftp_proxy: "{{ frontend.api_parser_custom_proxy }}"
+{% else -%}
 # use_system_proxy=yes
-{% endif %}
+{% endif -%}{# if frontend.api_parser_custom_proxy #}
+{% endif %}{# if frontend.api_parser_use_proxy #}
 
 filebeat.inputs:
 # Create a 'fake' entry to have at least a working input
