@@ -41,6 +41,7 @@ from system.pki.models import X509Certificate
 from toolkit.api.responses import build_response, build_form_errors
 from toolkit.http.headers import HeaderForm, DEFAULT_FRONTEND_HEADERS
 from toolkit.api_parser.utils import get_api_parser
+from toolkit.network.network import parse_proxy_url
 
 # Required exceptions imports
 from django.core.exceptions import ObjectDoesNotExist
@@ -728,6 +729,14 @@ def frontend_test_apiparser(request):
 
         if data.get('api_parser_verify_ssl', True) and data.get('api_parser_custom_certificate', None):
             data['api_parser_custom_certificate'] = X509Certificate.objects.get(pk=data['api_parser_custom_certificate']).bundle_filename
+
+        if data.get('api_parser_use_proxy', True) and data.get('api_parser_custom_proxy', None):
+            # parse_proxy_url will validate and return a correct url
+            proxy = parse_proxy_url(data.get('api_parser_custom_proxy', None))
+            if not proxy:
+                return JsonResponse({'status': False, 'error': "Wrong proxy format"})
+            data['api_parser_custom_proxy'] = proxy
+
         parser = get_api_parser(type_parser)(data)
         return JsonResponse(parser.test())
 
