@@ -867,6 +867,15 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12" id="api_parser_custom_proxy">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.api_parser_custom_proxy.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.api_parser_custom_proxy }}
+                            {{ form.api_parser_custom_proxy.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode filebeat-api-mode">
                         <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.api_parser_verify_ssl.label }}</label>
@@ -876,7 +885,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-12 api-mode filebeat-api-mode" id="api_parser_custom_certificate">
+                      <div class="col-md-12" id="api_parser_custom_certificate">
                         <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.api_parser_custom_certificate.label }}</label>
                           <div class="col-sm-5">
